--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@worldcoin/idkit": "^1.2.0",
     "axios": "^1.6.8",
     "daisyui": "^4.10.3",
     "firebase": "8.2.1",
