--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,5 @@ NEXT_PUBLIC_FIREBASE_API_KEY=
 NEXT_PUBLIC_FIREBASE_PROJECT_ID=
 NEXT_PUBLIC_FIREBASE_APP_ID=
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=
-NEXT_PUBLIC_WLD_APP_ID=""
-NEXT_PUBLIC_WLD_ACTION=""
+NEXT_PUBLIC_WORLD_APP_ID="app_staging_c7365b40d2cbb45c0234d852eeeedb35"
+NEXT_PUBLIC_WORLD_ID_ACTION_ID="verify-user"
