--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-hot-toast": "1.0.2",
     "react-indexed-db-hook": "^1.0.14",
     "react-markdown": "5.0.3",
-    "thirdweb": "^5.15.0"
+    "thirdweb": "^5.6.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.1",
@@ -33,6 +33,6 @@
     "eslint-config-next": "12.0.1",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
-    "typescript": "4.6.3"
+    "typescript": "^5.0.4"
   }
 }
