--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-firebase-hooks": "2.2.0",
     "react-hook-form": "6.14.2",
     "react-hot-toast": "1.0.2",
+    "react-icons": "^5.2.0",
     "react-indexed-db-hook": "^1.0.14",
     "react-markdown": "5.0.3",
     "thirdweb": "^5.6.0"
